tests/baselines/reference/constructorAsType.errors.txt
==== tests/cases/compiler/constructorAsType.ts (1 errors) ====
    var Person:new () => {name: string;} = function () {return {name:"joe"};};
        ~~~~~~
!!! error TS2323: Type '() => { name: string; }' is not assignable to type 'new () => { name: string; }'.
    
    var Person2:{new() : {name:string;};};
    
    Person = Person2;